# nnlibs

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md
common/: config.h  tensor.h
network/: cla_network.h  network.h  simple_network.h
ops/: CMakeLists.txt  operator.h  ops.h
ops/activation/: relu.h  relu_cpu.cpp  relu_cpu.h  sigmoid.h  sigmoid_cpu.cpp  sigmoid_cpu.h
ops/attention/: multi_head_attention.h  multi_head_attention_cpu.cpp  multi_head_attention_cpu.h  self_attention.h  self_attention_cpu.cpp  self_attention_cpu.h
ops/convolution/: conv_2d.h  conv_2d_cpu.cpp  conv_2d_cpu.h  linear.h  linear_cpu.cpp  linear_cpu.h  max_pool_2d.h  max_pool_2d_cpu.cpp  max_pool_2d_cpu.h
ops/functional/: blas.h  functional.h
ops/loss/: cross_entropy.cpp  cross_entropy.h
ops/normalization/: layer_norm.h  layer_norm_cpu.cpp  layer_norm_cpu.h
python/: test_conv2d.py  test_cross_entropy.py  test_linear.py  test_maxpool2d.py  test_relu.py
tests/: CMakeLists.txt  cla_test.cpp  e2e_test.cpp  test_tensor.cpp
tests/matrix/: CMakeLists.txt  block_size.cpp  test.cpp
tests/ops/: test_activation.cpp  test_attention.cpp  test_convolution.cpp  test_cross_entropy.cpp  test_linear.cpp  test_max_pool2d.cpp  test_norm.cpp
tests/utils/: image_ut.h
